2003-07-15  Vladimir Prus <ghost@cs.msu.su>

	* qm/test/web/web.py (DirPage.GetTestResultsForDirectory): Call
	__IsLabelInDirectory with two parameters.  Fix typo.
	
	* qm/test/web/web.py (QMTestServer.HandleSaveExpectations): Do not
	pass 'context' parameter to Result.__init__.
	
	* qm/test/web/web.py (StorageResultStream.__init__): Initialize
	__annotations.  

2003-07-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/classes/pickle_result_stream.py
	(PickleResultReader.GetResult): Don't catch UnpicklingError;
	it's not necessary with Python 2.2.
	(PickleResultReader.__init__): Likewise.
	Also, fix typo (call self._ResetUnpickler, not
	self._ResetPickler).
	
2003-07-09  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/context.py (Context.items): New method.

2003-07-02  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/base.py (load_results): Rename 'ResultSource' to
	'ResultReader' everywhere.
	(extension_kinds): Rename "result_source" kind to
	"result_reader".
	(__extension_bases): Likewise.  And same for the imports just
	above.
	* qm/test/result_source.py: Rename to...
	* qm/test/result_reader.py: ...this.  Also rename classes, etc.
	* qm/test/file_result_source.py: Rename to...
	* qm/test/file_result_reader.py: ...this.  Also rename classes,
	etc.
	
	* qm/common.py (format_time_iso): New function.
	* qm/db.py: New file.
	* qm/extension.py (get_class_arguments): Support diamond
	inheritance.

	* qm/test/classes/pickle_result_source.py: Remove.
	(PickleResultSource): Move to...
	* qm/test/classes/pickle_result_stream.py: ...here.
	(PickleResultSource): Rename to 'PickleResultReader'.  Also
	rewrite for new metadata handling regime.
	(PickleResultStream): Rewrite for new metadata handling regime.
	* qm/test/classes/xml_result_source.py: Remove.
	(XMLResultSource): Move to...
	* qm/test/classes/xml_result_stream.py: ...here.
	(XMLResultSource): Rename to 'XMLResultReader', plus associated
	renames.  Update for new metadata handling regime.